@@ -11,3 +11,4 @@ require 'active_support/core_ext/string/output_safety'
 require 'active_support/core_ext/string/exclude'
 require 'active_support/core_ext/string/encoding'
 require 'active_support/core_ext/string/strip'
+require 'active_support/core_ext/string/inquiry'
